# extras

./: .clang-format  .gitignore  CMakeLists.txt  HOWTO.md  INSTALL.md  LICENSE  LICENSE.md  README.md  bad_script.sh  changelog.md  description-pak  doxygen.conf  out.txt  recv.txt  send.txt  send_downloaded.txt
.github/workflows/: cmake._yml  cmake.yml
cmake/: 32_64.cmake  Find32or64bit.cmake  README.md  utils.cmake
cmake/Modules/: CPM.cmake
colors/: CMakeLists.txt
doc-pak/: README.md
docs/: CMAKE.md  EMAIL.md  GIT.md  HOSTING.md  IMAGES.md  INSTALL.md  LINUX.md  SETUP.md  TAGIT.md  VSC.md
docs/websites/: HTTPS_SUPPORT  HTTPS_SUPPORT.md  VIRTUAL_HOSTS.md
docs/windows/: TWEAKS.md
extra/: CMakeLists.txt
extra/include/extra/: Definitions.hpp  octal_support.hpp  support.hpp
extra/src/: crc16.cpp  crc32.cpp  docopt.cpp
extra_colors/: CMakeLists.txt
extra_colors/include/extra/: ansi_colors.hpp  ansi_input.hpp  colors.hpp
extra_colors/src/: ansi_colors.cpp
extra_crcs/: CMakeLists.txt
extra_crcs/include/extra/: crc16_support.hpp  crc32_support.hpp  crc64_support.hpp  crcs.hpp  octal_support.hpp
extra_crcs/src/: Directory.cpp  crc16.cpp  crc64.cpp  string_support.cpp
extra_files/: CMakeLists.txt
extra_files/include/extra/: Directory.hpp  files.hpp
extra_files/src/: Directory.cpp
extra_interfaces/: CMakeLists.txt
extra_interfaces/include/extra/: interfaces.hpp
extra_keywords/: CMakeLists.txt
extra_keywords/include/extra/: interfaces.hpp  keywords.hpp
extra_keywords/src/: keywords.cpp
extra_options/: CMakeLists.txt
extra_options/include/extra/: docopt.h  docopt_private.h  docopt_util.h  options.hpp
extra_strings/: CMakeLists.txt
extra_strings/include/extra/: string_support.hpp  strings.hpp
extra_strings/src/: string_support.cpp
frontdesk/: CMakeLists.txt
frontdesk/include/: Customer.hpp  DB2Database.hpp  FrontDesk.hpp  FrontDeskInterface.hpp  Hotel.hpp  HotelDB2.hpp  HotelInterface.hpp  Reservation.hpp  ReservationExceptions.hpp  Room.hpp  RoomExceptions.hpp  RoomKey.hpp  RoomSelectionInterface.hpp  RoomTypeInterface.hpp
frontdesk/include/hotels/: CheapHotel.hpp  DeltaHotel.hpp
frontdesk/include/roomkeys/: DeltaRoomKey.hpp  DeltaRoomKeyExceptions.hpp  HiltonRoomKey.hpp  HitlonRoomKeyExceptions.hpp
frontdesk/src/: FrontDesk.cpp  Hotel.cpp  Room.cpp
frontdesk/src/hotels/: CheapHotel.cpp  DeltaHotel.cpp
html/: HelloWorld_8hpp_source.html  annotated.html  classHelloWorldInterface.html  classes.html  dir_c43179e61e6d34e1ddf00e58d5e8c39a.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html
html/search/: all_0.js  classes_0.js
include/HelloWorld/: HelloWorld.hpp
include/extra/: Directory.hpp  ansi_colors.hpp  ansi_input.hpp  colors.hpp  crc16_support.hpp  crc32_support.hpp  crc64_support.hpp  crcs.hpp  docopt_private.h  interfaces.hpp  keywords.hpp  options.hpp  strings.hpp  support.hpp
include/extras/: ansi_colors.hpp  crc16_support.hpp  crc32_support.hpp  crc64_support.hpp  crcs.hpp  domains.hpp  dotenv.hpp  exceptions.hpp  files.hpp  interfaces.hpp  keywords.hpp  octal_support.hpp  paths.hpp  rsi.hpp  strings.hpp  support.hpp  types.hpp  version.hpp
instances/: a_client.cpp  a_server.cpp  c_client.cpp  c_server.cpp  client.cpp  downloader_client.cpp  downloader_server.cpp  file_client.cpp  file_server.cpp  port_client.cpp  port_server.cpp  request_client.cpp  request_server.cpp  retag.cpp  rsi_client.cpp  rsi_server.cpp  server.cpp  socket_client.cpp  socket_server.cpp  test_client.cpp  the_server.cpp  uploader_client.cpp  uploader_client2.cpp  uploader_server.cpp  uploader_server1.cpp
instances/prototypes/: file_server.cpp  port_client.cpp  port_server.cpp  process_client.cpp  process_server.cpp  socketpool_client.cpp  socketpool_server.cpp  status_main.cpp  status_test.cpp  test_client.cpp  test_server.cpp  uploader_client1.cpp
interfaces/: main.cpp
interfaces/crcs/: dock_octal.cpp  test_crc32.cpp  test_crc64.cpp  test_crcs.cpp
interfaces/devices/: dock_dotenv.cpp  test_dotenv.cpp
interfaces/etc/: dock_interface.cpp
interfaces/file/: dock_assertions.cpp  dock_interface.cpp  mold_interface.cpp
interfaces/filesystem/: dock_paths.cpp  test_filenotfound.cpp  test_filesystem.cpp  test_paths.cpp  test_system.cpp
interfaces/language/: dock_exceptions.cpp  test_exceptions.cpp
interfaces/retag/: dock_instance.cpp  mold_interface.cpp
interfaces/status/: dock_StatusLine.cpp  test_StatusLine.cpp
interfaces/strings/: test_ReplaceFirst.cpp  test_ReplaceLast.cpp  test_Split.cpp
latex/: annotated.tex  classHelloWorldInterface.tex  md_README.tex  refman.tex
src/: Directory.cpp  ansi_colors.cpp  crc.cpp  crc16.cpp  crc32.cpp  crc64.cpp  dotenv.cpp  exceptions.cpp  files.cpp  paths.cpp  string_support.cpp
src/HelloWorld/: HelloWorld.cpp
src/bin2hex/: BinConverter.cpp  BinFile.cpp  FileTransfer.cpp  HexConverter.cpp  HexFile.cpp  HexPacket.cpp
src/crcs/: crc.cpp  crc16.cpp  crc32.cpp  crc64.cpp  statics.cpp
src/devices/: ansi_colors.cpp  dotenv.cpp
src/file/: assertions.cpp  construct.cpp  exceptions.cpp  file.cpp  methods.cpp
src/filesystem/: file.cpp  files.cpp  filesystem.cpp  paths.cpp  system.cpp
src/language/: exceptions.cpp
src/rsi/: Process.cpp  RSI.cpp  Uploader.cpp
src/sockets/: CSocket.cpp  CSocketClient.cpp  CSocketServer.cpp  Domains.cpp  PortAuthority.cpp  (+6 more)
test/: MockSocket.hpp  mock_Socket.cpp  mock_SocketServer.cpp  mock_domains.cpp  mock_dotenv.cpp  mock_exceptions.cpp  mock_filestransfer.cpp  mock_filestransfer2.cpp  mock_filetransfer.cpp  mock_hex2bin.cpp  mock_hexfilestransfer.cpp  mock_octal.cpp  mock_paths.cpp  mock_sockets.cpp  mock_temperatuers.cpp  test_BinFile.cpp  test_Directory.cpp  test_FakeIt.cpp  test_HelloWorld.cpp  test_HexConverter.cpp  test_HexFile.cpp  test_Socket.cpp  test_SocketClient.cpp  test_SocketServer.cpp  test_crc32.cpp  test_crc64.cpp  test_crcs.cpp  test_domains.cpp  test_dotenv.cpp  test_exceptions.cpp  test_filestransfer.cpp  test_hex2bin.cpp  test_paths.cpp  test_sockets.cpp  test_temperatures.cpp  test_uploader.cpp
(+236 files in other folders)
